--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.0.1",
     "document-register-element": "^1.13.2"
   }
